<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>ros2_track_imu</name>
    <version>0.1.0</version>
    <description>
        ros2_track_imu is a package that provides a ROS2 driver
        for the TrackIMU.
    </description>

    <maintainer email="ankl@kth.se">Andreas Klintberg</maintainer>

    <license>MIT</license>

    <author>Andreas Klintberg</author>

    <url type="website">https://github.com/klintan/ros2_track_imu</url>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>python-serial</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>diagnostics_msgs</exec_depend>

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>

</package>

